# Gbx

./: .gitignore  BlockImporter.py  CollectionId.py  Containers.py  Gbx.py  GbxReader.py  GbxWriter.py  LocalStrings.py  README.md  __init__.py  pyproject.toml
Classes/: CControlEffectSimi.py  CFuncKeys.py  CFuncKeysNatural.py  CFuncPlug.py  CGameCtnBlockInfoClip.py  CGameCtnBlockUnitInfo.py  CGameCtnChallenge.py  CGameCtnChallengeParameters.py  CGameCtnCollector.py  CGameCtnCollectorList.py  CGameCtnGhost.py  CGameCtnMediaBlockCameraPath.py  CGameCtnMediaBlockFxBlurDepth.py  CGameCtnMediaBlockFxBlurMotion.py  CGameCtnMediaBlockSound.py  CGameCtnMediaBlockText.py  CGameCtnMediaBlockTime.py  CGameCtnMediaBlockUi.py  CGameCtnMediaTrack.py  CGameCtnReplayRecord.py  CGameGhost.py  CGamePlayerOfficialScores.py  CGamePlayerScore.py  CHmsSoundSource.py  CMotionPlayer.py  CMotionShader.py  CMwRefBuffer.py  CPlugFileFidCache.py  CPlugIndexBuffer.py  CPlugMaterialCustom.py  CPlugShaderApply.py  CPlugSolid.py  CPlugSurface.py  CPlugSurfaceGeom.py  CPlugTree.py  CPlugTreeVisualMip.py  CPlugVisual3D.py  CPlugVisualIndexed.py  CSceneMobil.py  CSceneObject.py  (+3 more)
Lzo/: Lzo.py
src/gbx/: BlockImporter.py  GameIDs.py  GbxReader.py  GbxWriter.py  __init__.py
src/gbx/Classes/: CFuncTreeSubVisualSequence.py  CGameCampaignPlayerScores.py  CGameCtnBlockInfo.py  CGameCtnBlockInfoRoad.py  CGameCtnBlockSkin.py  CGameCtnMediaBlock3dStereo.py  CGameCtnMediaBlockCameraGame.py  (+28 more)
tests/: test_general.py  test_lzo.py  test_parsing.py  test_perf.py  test_similarity.py  test_something.py  test_writing.py
(+69 files in other folders)
